--- a/app/scss/globals/fonts.scss
+++ b/app/scss/globals/fonts.scss
@@ -1,4 +1,4 @@
 :root {
   --font-text: 'Lato', Helvetica, Arial, sans-serif; // body text
-  --font-heading: 'Georama', Helvetica, Arial, sans-serif; // heading font
+  --font-heading: 'Roboto', sans-serif; // heading font
 }
